--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 
 <head>
   <title>Black Goose Bistro</title>
+  <style type="text/css">
+    body {
+      background-color: #c2A7f2;
+      font-family: sans-serif;
+    }
+    h1 {
+      color:2A1959;
+      border-bottom: 2px solid #2a1959
+    }
+    h2 {
+      color: 474B94;
+      font-size: 1.2em;
+    }
+    h2, p  {
+      margin-left: 120px;
+    }
+  </style>
+  
   </head>
   
   <body>
+    <h1><img src="blackgoose.gif" alt="Black Goose 
+      logo" />Black Goose Bistro</h1>
+    
   <h1>Black Goose Bistro</h1>
   
   <h2>The Resturaunt</h2>
