--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <title>Black Goose Bistro</title>
   <style type="text/css">
+    .button {
+  background-color: #00BFFF;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+}
     body {
       background-color: #c2A7f2;
       font-family: sans-serif;
@@ -40,6 +51,9 @@
  Bakers Corner in Seekong, Massachusetts;
  Monday through Thursday 11am to 9pm, Friday and Saturday, 11am to 
  midnight
+   
+<button class="button">Button</button>
+  
  </body>
  
  </html>
