--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
  Monday through Thursday 11am to 9pm, Friday and Saturday, 11am to 
  midnight
    
-<button class="button">Button</button>
+<button class="button">Order Here</button>
   
  </body>
  
