--- a/index.html
+++ b/index.html
@@ -1,59 +1,118 @@
+
 <html>
 
+
+
 <head>
+
   <title>Black Goose Bistro</title>
+
   <style type="text/css">
+
     .button {
+
   background-color: #00BFFF;
+
   border: none;
+
   color: white;
+
   padding: 15px 32px;
+
   text-align: center;
+
   text-decoration: none;
+
   display: inline-block;
+
   margin: 4px 2px;
+
   cursor: pointer;
+
 }
+
     body {
+
       background-color: #c2A7f2;
+
       font-family: sans-serif;
+
     }
+
     h1 {
+
       color:2A1959;
+
       border-bottom: 2px solid #2a1959
+
     }
+
     h2 {
+
       color: 474B94;
+
       font-size: 1.2em;
+
     }
+
     h2, p  {
+
       margin-left: 120px;
+
     }
+
   </style>
+
   
+
   </head>
+
   
+
   <body>
+
     <h1><img src="blackgoose.gif" alt="Black Goose 
+
       logo" />Black Goose Bistro</h1>
+
   
+
   <h2>The Resturaunt</h2>
+
   
+
   <p>The Black Goose Bistro offers casual lunch and dinner fare in a hip
+
   atmosphere. The menu changes regularly to highlight the freshest ingredients.
+
   </p>
+
   
+
   <h2>Catering Services<h2>
+
   <p>You have fun... <em>we'll do the cooking.</em> Black Goose Catering can handle 
+
   events from snacks for bridge club to elegnant corporate fundraisers.</p>
+
   
+
  <h2>Location and Hours<h2>
+
  Bakers Corner in Seekong, Massachusetts;
+
  Monday through Thursday 11am to 9pm, Friday and Saturday, 11am to 
+
  midnight
+
    
-<button class="button">Order Here</button>
+
+<h3><button class="button">Order Here</button><h3>
+
   
+
  </body>
+
  
+
  </html>
