--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
 
   <h2>The Resturaunt</h2>
 
-  
+  <a href="News.html">News</a>
+  <a href="About.html">About</a>
+  <a href="Menu.html">Menu</a>
+  <a href="Blog.html">Blog</a>
+  <a href="Contact.html">Contact</a>
 
   <p>The Black Goose Bistro offers casual lunch and dinner fare in a hip
 
