--- a/About.html
+++ b/About.html
@@ -1,10 +1,12 @@
 <html>
  
-<body>
+<head>
   
   <title>About Jen's Kitchen</title>
+ <body>
   <p> The recipes listed here are ones that I have developed myself. In some cases, I started with a recipe found in a cookbook or magazine, but over time, I've adapted it enough to call it my own. Bon Appetit!</p>
   <p>The site also includes links to my favorite online cooking resources. One day, I hope to include a section of restaurant reviews.</p>
   <p>If you have recommendations, feel free to email me at<p> <a href="https://www.outlook.com"jen@example.com.</a>
   <a href="index.html"Back</a>
  </body>
+ </head>
