--- a/About.html
+++ b/About.html
@@ -1,12 +1,39 @@
 <html>
- 
-<head>
-  
+ <head>
+  <meta charset="utf-8"/>
   <title>About Jen's Kitchen</title>
- <body>
-  <p> The recipes listed here are ones that I have developed myself. In some cases, I started with a recipe found in a cookbook or magazine, but over time, I've adapted it enough to call it my own. Bon Appetit!</p>
-  <p>The site also includes links to my favorite online cooking resources. One day, I hope to include a section of restaurant reviews.</p>
-  <p>If you have recommendations, feel free to email me at<p> <a href="https://www.outlook.com"jen@example.com.</a>
-  <a href="index.html"Back</a>
- </body>
+  <style>
+   body {
+      margin: 2em 5em;
+       f;
+   }
+   h1, h2 {
+    color:#339;
+   }
+   h1 {
+    font-size: 2.0em;
+   }
+   h2 {
+   font-size 1em;
+   }
+   small {
+    color#999;
+   }
+  </style>
  </head>
+ <body>
+  <h1> About Jen's Kitchen</h1
+   <p> The recipes listed here are ones that I have developed myself. In some cases, I started with a recipe found in a cookbook or magazine, but over time, I've adapted it enough to call it my own. 
+   <i>Bon Appetit!</i>
+   </p>
+  <p>The site also includes links to my favorite online cooking resources. One day, I hope to include a section of restaurant reviews.
+  </p>
+  <p> If you have recommendations, feel free to email me at 
+   <a href="mailto:jen@example.com">jen@example.com.</a>
+  </p>
+  <p>
+  <a href="https://Ratchet7667.github.io/fid/blackgoose/">Back to the home page</a>
+  </p>
+ </body>
+</html>
+   
