--- a/About.html
+++ b/About.html
@@ -5,15 +5,18 @@
   <style>
    body {
       margin: 2em 5em;
+       font-family: Georgia, "Times New Roman"
        f;
    }
    h1, h2 {
     color:#339;
    }
    h1 {
-    font-size: 2.0em;
+    font-size: 1.5em;
    }
    h2 {
+    font-family: Verdana, Geneva, sans-serif;
+    
    font-size 1em;
    }
    small {
@@ -22,7 +25,7 @@
   </style>
  </head>
  <body>
-  <h1> About Jen's Kitchen</h1
+  <h1> About Jen's Kitchen</h1>
    <p> The recipes listed here are ones that I have developed myself. In some cases, I started with a recipe found in a cookbook or magazine, but over time, I've adapted it enough to call it my own. 
    <i>Bon Appetit!</i>
    </p>
