--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
   <style>
    body {
       margin: 2em 5em;
-       font-family: Georgia, "Times New Roman"
+       font-family: Georgia, "Times New Roman", Times, seri
        f;
    }
    h1, h2 {
