--- a/News.html
+++ b/News.html
@@ -26,6 +26,7 @@
                 margin: 1em;
               }
           </style>
+  </head>
     <body>
           <h1>The Black Goose Bistro News</h1>
             <nav class="food">
