--- a/News.html
+++ b/News.html
@@ -1,7 +1,6 @@
-<html>
-  <head>
-    <title>Black Goose Bistro News</title>
-    <style>
+<html lang="en"><head>
+      <title>Black Goose Bistro News</title>
+          <style>
               html {
                 font-family: sans-serif;
                 margin: 2em 6em;
@@ -26,7 +25,8 @@
                 margin: 1em;
               }
           </style>
-  </head>
+    </head>
+
     <body>
           <h1>The Black Goose Bistro News</h1>
             <nav class="food">
@@ -90,5 +90,4 @@
             <footer>All content © 2017, Black Goose Bistro and Jennifer Robbins</footer>
     
   
-</body>
-    </html>
+</body></html>
