--- a/Menu.html
+++ b/Menu.html
@@ -44,7 +44,7 @@
 
         <body>
 
-          <img width="660" height="94" alt="Jen's Kitchen banner" src="https://github.com/spazimoto/fid/blob/master/blackgoose/images/jenskitchen.gif?raw=true">
+          <img width="660" height="94" alt="Jen's Kitchen banner" src="https://github.com/Ratchet7667/fid/blob/master/blackgoose/images/jenskitchen.gif?raw=true">
               <h1>Welcome to Jen’s Kitchen</h1>
 
 
@@ -58,13 +58,13 @@
 
           <ul>
 
-            <li><a href="https://spazimoto.github.io/fid/blackgoose/jenskitchen/recipes/tapenade.html">Tapenade (Olive Spread)</a></li>
+            <li><a href="https://Ratchet7667.github.io/fid/blackgoose/jenskitchen/recipes/tapenade.html">Tapenade (Olive Spread)</a></li>
 
-            <li><a href="https://spazimoto.github.io/fid//blackgoose/jenskitchen/recipes/salmon.html">Garlic Salmon</a></li>
+            <li><a href="https://Ratchet7667.github.io/fid//blackgoose/jenskitchen/recipes/salmon.html">Garlic Salmon</a></li>
 
-            <li><a href="https://spazimoto.github.io/fid/blackgoose/jenskitchen/recipes/pasta/linguine.html">Linguine with Clam Sauce</a></li>
+            <li><a href="https://Ratchet7667.github.io/fid/blackgoose/jenskitchen/recipes/pasta/linguine.html">Linguine with Clam Sauce</a></li>
 
-            <li><a href="https://spazimoto.github.io/fid/blackgoose/jenskitchen/recipes/pasta/couscous.html">Couscous with Peas and Mint</a></li>
+            <li><a href="https://Ratchet7667.github.io/fid/blackgoose/jenskitchen/recipes/pasta/couscous.html">Couscous with Peas and Mint</a></li>
 
          </ul>
               <h2>Good Food on the Web</h2>
