--- a/News.html
+++ b/News.html
@@ -31,10 +31,10 @@
           <h1>The Black Goose Bistro News</h1>
             <nav class="food">
               <ul>
-                <li class="food"><a href="https://spazimoto.github.io/fid/blackgoose/">Home</a></li>
-                <li class="food"><a href="https://spazimoto.github.io/fid/blackgoose/jenskitchen/about.html">About</a></li>
-                <li class="food"><a href="https://spazimoto.github.io/fid/blackgoose/jenskitchen/">Menu</a></li>
-                <li class="food"><a href="https://spazimoto.github.io/fid/blackgoose/inline.html">Blog</a></li>
+                <li class="food"><a href="https://Ratchet7667.github.io/fid/blackgoose/">Home</a></li>
+                <li class="food"><a href="https://Ratchet7667.github.io/fid/blackgoose/jenskitchen/about.html">About</a></li>
+                <li class="food"><a href="https://Ratchet7667.github.io/fid/blackgoose/jenskitchen/">Menu</a></li>
+                <li class="food"><a href="https://Ratchet7667.github.io/fid/blackgoose/inline.html">Blog</a></li>
                 <li class="food"><a href="mailto:blackgoose@example.com">Contact</a></li>
               </ul>
       </nav>
