--- a/Contact.html
+++ b/Contact.html
@@ -1,1 +1,41 @@
 
+<html>
+  <head>
+<meta charset="utf-8">
+<style>
+body {
+	font-family: sans-serif;
+	}
+h1	{text-align: center;
+	font-family: serif;
+	font-weight: normal;
+	text-transform: uppercase
+	border-bottom: 1px solid #57b1dc
+	martgin-top: 30px
+	}
+h2	{
+	color: #d1633c;
+	font-size: 1em;
+	}
+</style>
+
+<div class="topnav">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="menu1.html">Menu</a>
+  <a href="blog.html">Blog</a>
+  <a href="contact.html">Contact</a>
+ </div>
+ <hr>
+
+
+
+<h2>Location and Hours</h2>
+Seekonk, Massachusetts;<br>
+Sun-Friday 9:00am-8:00pm;<br>
+Sat 9:00am-12:00pm<br>
+
+<h2>Telephone 123-456-7890<br> 
+<h32> Email: blackgoose@example.com
+
+</body></html>
