--- a/Blog.html
+++ b/Blog.html
@@ -13,7 +13,7 @@
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><a href="cooking.html">Cooking With Daniel</a></li>
+    <li><a href="Cooking.html">Cooking With Daniel</a></li>
   </ul>
 </nav>
 </header>
