--- a/Blog.html
+++ b/Blog.html
@@ -12,7 +12,7 @@
 <nav>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li><a href="Contact.html">Contact</a></li>
     <li><a href="Cooking.html">Cooking With Daniel</a></li>
   </ul>
 </nav>
