--- a/Blog.html
+++ b/Blog.html
@@ -68,7 +68,7 @@
   <p><small>All content copyright © 2017, Black Goose Bistro and Jennifer Robbins</small></p>
 </footer>
 
-<li><a href="gloss/Glossary.html">Glossary</a></li>
+<li><a href="Glossary.html">Glossary</a></li>
 
 
 
