--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   
 
-  <h2>Catering Services<h2>
+  <h2>Catering Services</h2>
 
   <p>You have fun... <em>we'll do the cooking.</em> Black Goose Catering can handle 
 
@@ -91,13 +91,13 @@
 
   
 
- <h2>Location and Hours<h2>
+ <h2>Location and Hours</h2>
 
- Bakers Corner in Seekong, Massachusetts;
+<p> Bakers Corner in Seekong, Massachusetts;
 
  Monday through Thursday 11am to 9pm, Friday and Saturday, 11am to 
 
- midnight
+  midnight</p>
 
    
 
