--- a/index.html
+++ b/index.html
@@ -9,17 +9,6 @@
 
   <style type="text/css">
 
-    .button {
-
-  background-color: #00BFFF;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  display: inline-block;
-  margin: 4px 2px;
-  cursor: pointer;
-
 }
 
     body {
@@ -62,9 +51,9 @@
 
   <body>
 
-    <h1><img src="blackgoose.gif" alt="Black Goose 
-
-      logo" />Black Goose Bistro</h1>
+    <h1><img alt="logo" src="blackgoose.png 
+      <br />
+      Black Goose Bistro</h1>
 
   
 
@@ -99,11 +88,14 @@
 
   midnight</p>
 
-   
 
-<h3><button class="button">Order Here</button><h3>
+  <button type="button">
+    <li><a href="pizza.html">
+      <img alt="Button" src="button.gif"></a>
+      </li><a href="pizza.html">
 
-  
+
+</a></button>
 
  </body>
 
