--- a/pizza.html
+++ b/pizza.html
@@ -1,1 +1,76 @@
+<html>
+  <head>
+  <meta charset="utf-8">
+   <title>Blackstone Bistro: Pizza-on-Demand</title>
+   <style type="text/css">
+      ol, ul { 
+     list-style-type: none;
+      }
+   </style>
+</head>
 
+<body>
+
+<h1>Blackstone Bistro | Pizza-on-Demand</h1>
+
+<p>Our 12" wood-fired pizzas are available for delivery. Build your custom pizza and we'll deliver it within an hour.</p>
+
+<form action="http://www.blackgoosebistro.com/pizza.php" method="POST">
+<fieldset>
+<legend>Your Information</legend>
+<ul>
+  <li><label for="form-name">Name:</label><input name="fullname" id="form-name" type="text"></li>
+  <li><label for="form-address">Address:</label><input name="address" id="form-address" type="text"></li>
+  <li><label for="form-number">Telephone Number</label>:<input name="telephone" id="form-number" type="text"></li>
+  <li><label for="form-email">Email:<input name="email" id="form-email" type="text"></label></li>
+
+  <li>Delivery instructions:<br>
+ <textarea name="instructions" id="form-story" maxlength="400" placeholder="No more than 400 characters long" rows="4" cols="60"></textarea></li>
+</ul>
+</fieldset>
+
+<h2>Design Your Dream Pizza:</h2>
+<fieldset>
+<legend>Pizza specs<legend>
+
+<fieldset>
+<legend>Crust <em>(Choose one)</em>:</legend>
+<ul>
+  <li><label><input name="crust" type="radio" value="white">Classic white</label></li>
+  <li><label><input name="crust" type="radio" value="multigrain">Multigrain</label></li>
+  <li><label><input name="crust" type="radio" value="stuffed-crust">Cheese-stuffed crust</label></li>
+  <li><label><input name="crust" type="radio" value="gluten-free">Gluten-free</label></li>
+</ul>
+</fieldset>
+
+<p>Toppings <em>(Choose as many as you want)</em>:</p>
+<ul>
+  <li><label><input name="toppings[]" type="checkbox" checked="" value="red sauce">Red sauce</label></li>
+  <li><label><input name="toppings[]" type="checkbox" value="white sauce">White sauce</label></li>
+  <li><label><input name="toppings[]" type="checkbox" value="mozzarella cheese">Mozzarella Cheese</label></li>
+  <li><label><input name="toppings[]" type="checkbox" value="pepperoni">Pepperoni</label></li>
+  <li><label><input name="toppings[]" type="checkbox" value="mushrooms">Mushrooms</label></li>
+  <li><label><input name="toppings[]" type="checkbox" value="peppers">Peppers</label></li>
+  <li><label><input name="toppings[]" type="checkbox" value="anchovies">Anchovies</label></li>
+</ul>
+
+<p>Number</p>
+<p>How many pizzas:
+<select name="pizzas" size="1">
+<option>1</option>
+<option>2</option>
+<option>3</option>
+<option>4</option>
+<option>5</option>
+<option>6</option>
+</select>
+</p>
+</legend></legend></fieldset>
+<p><input type="submit" value="Bring Me a Pizza!">
+<input type="reset" value="Reset"></p>
+
+</form>
+
+  <input onclick="history.go(-1);" type="button" value="Back">
+
+</body></html>
