--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
   
 
   <body>
-
-    <h1><img alt="logo" src="blackgoose.png 
+    <h1>
+      <img alt="logo" src="blackgoose.png" />
       <br />
-      Black Goose Bistro</h1>
-
+      Black Goose Bistro
+    </h1>
   
 
   <h2>The Resturaunt</h2>
