--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   <button type="button">
     <li><a href="pizza.html">
-      <img alt="ORDER HERE" src="button.gif"></a>
+      <img alt="ORDER HERE" src="button.png"></a>
       </li><a href="pizza.html">
 
 
