--- a/index.html
+++ b/index.html
@@ -89,11 +89,9 @@
   midnight</p>
 
 
-  <button type="button">
-    <li><a href="pizza.html">
-      <img alt="ORDER HERE" src="OrderButton-400x298.png"></a>
-      </li><a href="pizza.html">
-
+  <a href="pizza.html">
+<img src="images/orderbutton.png" alt="order here">
+</a>
 
 </a></button>
 
