--- a/About.html
+++ b/About.html
@@ -35,7 +35,7 @@
    <a href="mailto:jen@example.com">jen@example.com.</a>
   </p>
   <p>
-  <a href="https://Ratchet7667.github.io/fid/blackgoose/">Back to the home page</a>
+  <a href="index.html">Back to the home page</a>
   </p>
  </body>
 </html>
