--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   midnight</p>
     <p>
       <a href="pizza_order list.html">
-        <img src="images/order button.gif" alt="image" width="200" height="200">
+        <img src="OrderButton-400x298.png" alt="image" width="200" height="200">
       </a>
       <br>
     </p>
