--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
   midnight</p>
     <p>
-      <a href="pizza_order list.html">
+      <a href="order.html">
         <img src="OrderButton-400x298.png" alt="image" width="200" height="200">
       </a>
       <br>
