--- a/tapenede.html
+++ b/tapenede.html
@@ -3,7 +3,7 @@
 <title>Jen's Kitchen: Tapenade (Olive Spread)</title>
 <style>
 body {
-        background-color: #B66B3E;
+        background-color: #000000;
 	margin: 2em 6em;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
