--- a/index.html
+++ b/index.html
@@ -1,103 +1,89 @@
+<html><head>
+<meta charset="utf-8">
+<title>Black Goose Bistro</title> 
+  
+     <link href="stylesheet.css" rel="stylesheet">
+  
+  <style>
+body {
+  background-color: #ADD8E6;
+  margin: 0 10%;
+  font-family: sans-serif;
+  }
 
-<html>
+footer {border-top:1px solid #57b1dc; text-align:center; padding-top: 1em; }
+    footer img {width:40px; height:40px; margin-left:.5em; margin-right: .5em;}
 
+h1 {
+  text-align: center;
+  font-family: Roboto;
+  font-weight: normal;
+  text-transform: uppercase;
+  border-bottom: 1px solid #57b1dc;
+  margin-top: 30px;
+}
 
-
-<head>
-
-  <title>Black Goose Bistro</title>
-
-  <style type="text/css">
+h2 {
+  color: #800080;
+  font-size: 1em;
 
 }
 
-    body {
-
-      background-color: #c2A7f2;
-
-      font-family: sans-serif;
-
-    }
-
-    h1 {
-
-      color:2A1959;
-
-      border-bottom: 2px solid #2a1959
-
-    }
-
-    h2 {
-
-      color: 474B94;
-
-      font-size: 1.2em;
-
-    }
-
-    h2, p  {
-
-      margin-left: 120px;
-
-    }
-
-  </style>
-
+</style>
   
+</head><body>  
 
-  </head>
+<h1><img src="blackgoose.png" alt="logo"><br>Black Goose Bistro</h1>
+    
 
+    
+<div class="topnav">
+<a class="active" href="index.html">Home</a>
+  <a href="bgnews.html">News</a>
+  <a href="jenskitchen.html">Chef</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="glossary-done.html">Glossary</a>
+  <a href="pizza.html">Pizza</a>
+</div>
+
+
+<h2>The Restaurant</h2>
+<p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes regularly to highlight the freshest local ingredients.</p>
+<p>Click<a href="bgnews.html"> here</a> for our blog, menu, and news.</p>
+
+<h2>Meet the Chef</h2>
+<p>Click <a href="jenskitchen.html">here</a> to learn about Jen, our chef.</p>
+
+<h2>Catering</h2>
+<p>You have fun. <em>We'll handle the cooking.</em> Black Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
+
+<h2>Location and Hours</h2>
+<p>Seekonk, Massachusetts;<br>
+Monday through Thursday 11am to 9pm; <br>Friday and Saturday, 11am to midnight</p>
+
+<h2>Gallery</h2>
+<p>Click <a href="gallery.html">here</a> to see our gallery.
+
+</p><h2>Glossary</h2>
+<p>Click<a href="glossary-done.html"> here</a> for our glossary.</p>
+
+<h2>Reviews</h2>
+<p>"Amazing food... there's something for everyone! Also has a very welcoming atmosphere." - Katie M.</p>
   
+<h2>Order Pizza</h2>
+<p><a href="pizza.html"><img src="pizza.gif" height="150" <="" a=""></a></p><a href="pizza.html">
 
-  <body>
-    <h1>
-      <img alt="logo" src="blackgoose.png" />
-      <br />
-      Black Goose Bistro
-    </h1>
-  
+<footer>
 
-  <h2>The Resturaunt</h2>
-
-  <a href="About.html">About</a>
-  <a href="Menu.html">Menu</a>
-  <a href="Blog.html">Blog</a>
-  <a href="Contact.html">Contact</a>
-
-  <p>The Black Goose Bistro offers casual lunch and dinner fare in a hip
-
-  atmosphere. The menu changes regularly to highlight the freshest ingredients.
-
-  </p>
-
-  
-
-  <h2>Catering Services</h2>
-
-  <p>You have fun... <em>we'll do the cooking.</em> Black Goose Catering can handle 
-
-  events from snacks for bridge club to elegnant corporate fundraisers.</p>
-
-  
-
- <h2>Location and Hours</h2>
-
-<p> Bakers Corner in Seekong, Massachusetts;
-
- Monday through Thursday 11am to 9pm, Friday and Saturday, 11am to 
-
-  midnight</p>
-    <p>
-      <a href="order.html">
-        <img src="OrderButton-400x298.png" alt="image" width="200" height="200">
-      </a>
-      <br>
-    </p>
+<p>Please visit our social media pages</p>
+<p>
+<img src="twitter.svg" alt="twitter">
+<img src="facebook.svg" alt="facebook">
+<img src="instagram.svg" alt="Instagram">
+ </p>
+</footer>
 
 
 
- </body>
 
- 
-
- </html>
+</a></body></html>
