--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Monday through Thursday 11am to 9pm; <br>Friday and Saturday, 11am to midnight</
 <p>"Amazing food... there's something for everyone! Also has a very welcoming atmosphere." - Katie M.</p>
   
 <h2>Order Pizza</h2>
-<p><a href="pizza.html"><img src="pizza.gif" height="150" <="" a=""></a></p><a href="pizza.html">
+<p><a href="pizza.html"><img src="OrderButton-400x298.png" height="150" <="" a=""></a></p><a href="pizza.html">
 
 <footer>
 
