--- a/bread.html
+++ b/bread.html
@@ -4,7 +4,7 @@
 <title>Gallery: Baked Goods</title>
 <style>
 body {
-  background-color: #f3cf60;
+  background-color: #ADD8E6;
   margin: 0 10%;
   font-family: sans-serif;
   text-align: center;
