--- a/Menu.html
+++ b/Menu.html
@@ -1,82 +1,55 @@
-<html lang="en"><head>
-
-          <meta charset="utf-8">
+<html><head>
+<meta charset="utf-8">
 <title>Jen's Kitchen</title>
+<style>
+body {
+	background-color: #ADD8E6;
+	margin: 2em 5%;
+	font-family: Georgia, "Times New Roman", Times, serif;
+}
+h1, h2 {	
+	color: #399;}
+h1 {
+	font-size: 1.5em;
+}
+h2 {
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 1em;
+}
+small {
+	color: #999;
+}
+</style>
 
-              <style>
+</head>
 
-             body {
+<body>
+<img src="jenskitchen.gif" alt="Jen's Kitchen banner" width="660" height="94">
 
-                margin: 2em 5%;
-                font-family: Georgia, "Times New Roman", Times, serif;
+<h1>Welcome to Jen’s Kitchen</h1>
 
-              }
+<p>People who know me know that I love to cook. I've created this site to share some of my favorite recipes and online food resources. <i>Bon Appetit!</i> </p>
 
-              h1, h2 {
+Click <a href="about.html">here</a> to learn about the site.<p></p>
 
-                color: #399;
-              }
-              h1 {
+<h2>From Jen’s Cookbook</h2>
+<ul>
+  <li><a href="tapenade.html">Tapenade (Olive Spread)</a></li>
+  <li><a href="salmon.html">Garlic Salmon</a></li>
+  <li><a href="linguine.html">Linguine with Clam Sauce</a></li>
+  <li><a href="couscous.html">Couscous with Peas and Mint</a></li>
+</ul>
 
-                font-size: 1.5em;
+<h2>Good Food on the Web</h2>
+<ul>
+  <li><a href="http://www.foodnetwork.com">The Food Network</a></li>
+  <li><a href="http://www.epicurious.com">Epicurious</a></li>
+</ul>
+	
+<p>Click <a href="index.html">here</a> to return to the home page.</p>	
 
-             }
-
-              h2 {
-
-                font-family: Verdana, Geneva, sans-serif;
-
-                font-size: 1em;
-
-              }
-
-             small {
-
-                color: #999;
-
-             }
-
-               </style>
-
-
-        </head>
-
-
-        <body>
-
-          <img width="660" height="94" alt="Jen's Kitchen banner" src="https://github.com/Ratchet7667/fid/blob/master/blackgoose/images/jenskitchen.gif?raw=true">
-              <h1>Welcome to Jen’s Kitchen</h1>
-
-
-                <p>People who know me know that I love to cook. I've created this site to share some of my favorite recipes and online food resources. <i>Bon Appetit!</i> </p>
-
-
-                <p>About the site</p>
+<p><small>Copyright 2016, Jennifer Robbins</small></p>
 
 
-              <h2>From Jen’s Cookbook</h2>
 
-          <ul>
-
-            <li><a href="tapenade.html">Tapenade (Olive Spread)</a></li>
-
-            <li><a href="salmon.html">Garlic Salmon</a></li>
-
-            <li><a href="linguine.html">Linguine with Clam Sauce</a></li>
-
-            <li><a href="couscous.html">Couscous with Peas and Mint</a></li>
-
-         </ul>
-              <h2>Good Food on the Web</h2>
-
-              <ul>
-                  <li><a href="https://www.foodnetwork.com/">The Food Network</a></li>
-                  <li>Epicurious</li>
-                </ul>
-              <p><small>© 2018, Jennifer Robbins</small></p>
-
-
-          
-
-      
 </body></html>
