--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ h2 {
 <div class="topnav">
 <a class="active" href="index.html">Home</a>
   <a href="bgnews.html">News</a>
-  <a href="menu.html">Chef</a>
+  <a href="Menu.html">Chef</a>
   <a href="gallery.html">Gallery</a>
   <a href="glossary-done.html">Glossary</a>
   <a href="pizza.html">Pizza</a>
@@ -52,7 +52,7 @@ h2 {
 <p>Click<a href="bgnews.html"> here</a> for our blog, menu, and news.</p>
 
 <h2>Meet the Chef</h2>
-<p>Click <a href="menu.html">here</a> to learn about Jen, our chef.</p>
+<p>Click <a href="Menu.html">here</a> to learn about Jen, our chef.</p>
 
 <h2>Catering</h2>
 <p>You have fun. <em>We'll handle the cooking.</em> Black Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
