--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h2 {
   <a href="bgnews.html">News</a>
   <a href="Menu.html">Chef</a>
   <a href="gallery.html">Gallery</a>
-  <a href="glossary-done.html">Glossary</a>
+  <a href="Glossary.html">Glossary</a>
   <a href="pizza.html">Pizza</a>
 </div>
 
@@ -65,7 +65,7 @@ Monday through Thursday 11am to 9pm; <br>Friday and Saturday, 11am to midnight</
 <p>Click <a href="gallery.html">here</a> to see our gallery.
 
 </p><h2>Glossary</h2>
-<p>Click<a href="glossary-done.html"> here</a> for our glossary.</p>
+<p>Click<a href="Glossary.html"> here</a> for our glossary.</p>
 
 <h2>Reviews</h2>
 <p>"Amazing food... there's something for everyone! Also has a very welcoming atmosphere." - Katie M.</p>
