--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   
   <style>
 body {
-  background-color: #ADD8E6;
+  background-image: url("waves.png");
   margin: 0 10%;
   font-family: sans-serif;
   }
+   
 
 footer {border-top:1px solid #57b1dc; text-align:center; padding-top: 1em; }
     footer img {width:40px; height:40px; margin-left:.5em; margin-right: .5em;}
