--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <style>
 body {
   background-image: url("waves.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 0 10%;
   font-family: sans-serif;
   }
