--- a/salmon.html
+++ b/salmon.html
@@ -3,7 +3,7 @@
 <title>Jen's Kitchen: Garlic Salmon</title>
 <style>
 body {
-        background-color: #000000;
+        background-color: #ADD8E6;
 	margin: 2em 6em;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
