--- a/tapenede.html
+++ b/tapenede.html
@@ -3,12 +3,12 @@
 <title>Jen's Kitchen: Tapenade (Olive Spread)</title>
 <style>
 body {
-        background-color: #000000;
+	background-color: #ADD8E6;
 	margin: 2em 6em;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
 h1, h2 {	
-	color: #000000;}
+	color: #399;}
 h1 {
 	font-size: 1.5em;
 }
@@ -17,7 +17,7 @@ h2 {
 	font-size: 1em;
 }
 small {
-	color: #000000;
+	color: #999;
 }
 </style>
 
@@ -50,12 +50,8 @@ small {
 <li>Serve on thin toast rounds with goat cheese and fresh basil garnish (optional).</li>
 </ol>
 
-<p><a href="pasta/linguine.html">Try the Linguine with Clam Sauce</a></p>
-
-<p><a href="http://www.allrecipes.com">Go to Allrecipes.com</a></p>
-
-<p><a href="../index.html">[Back to the home page]</a></p>
-
+<p>Click <a href="index.html">here</a> to return to the home page.</p>	
+	
 
 
 </body></html>
