--- a/salmon.html
+++ b/salmon.html
@@ -3,12 +3,11 @@
 <title>Jen's Kitchen: Garlic Salmon</title>
 <style>
 body {
-        background-color: #ADD8E6;
-	margin: 2em 6em;
+	background-color: #ADD8E6;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
 h1, h2 {	
-	color: #000000;}
+	color: #399;}
 h1 {
 	font-size: 1.5em;
 }
@@ -17,7 +16,7 @@ h2 {
 	font-size: 1em;
 }
 small {
-	color: #000000;
+	color: #999;
 }
 </style>
 </head>
@@ -41,11 +40,8 @@ small {
   <li>Preheat the broiler. Transfer filets to a baking sheet, skin-down. Broil the salmon on the top rack for 7 to 9 minutes, or until done to your liking (I like it still pink in the center).</li>
   <li>I usually serve this with an aromatic rice and a lightly seasoned stir fry.</li>
 </ol>
-
-<p><a href="tapenade.html">Go to the tapenade recipe</a></p>
-
-
-<p><a href="../index.html">Back to the home page</a></p>
+	
+<p>Click <a href="index.html">here</a> to return to the home page.</p>	
 
 
 
