--- a/linguine.html
+++ b/linguine.html
@@ -3,12 +3,12 @@
 <title>Jen's Kitchen: Linguine with Clam Sauce</title>
 <style>
 body {
-        background-color: #000000;
+	background-color: #ADD8E6;
 	margin: 2em 6em;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
 h1, h2 {	
-	color: #000000;}
+	color: #399;}
 h1 {
 	font-size: 1.5em;
 }
@@ -17,7 +17,7 @@ h2 {
 	font-size: 1em;
 }
 small {
-	color: #000000;
+	color: #999;
 }
 </style>
 </head>
@@ -42,12 +42,9 @@ small {
   <li> Turn down the heat and add the reserved clams. At roughly the same time, add the pasta to the water and cook until al dente. About 9 minutes later, the pasta should be done and the clams will be warmed through.</li>
   <li> Taste the clam sauce and add salt and pepper to taste. If you're using butter, add one last tablespoon or two to bind the sauce (if you're using margarine, don't bother).</li>
 </ol>
-
-<p><a href="../../about.html">About Jen's Kitchen</a></p>
-
-<p><a href="../salmon.html">Try this with Garlic Salmon.</a></p>
-<p><a href="../../index.html">[Back to the home page]</a> 
+	
+<p>Click <a href="index.html">here</a> to return to the home page.</p>	
 
 
 
-</p></body></html>
+</body></html>
