--- a/couscous.html
+++ b/couscous.html
@@ -3,12 +3,12 @@
 <title>Jen's Kitchen: Couscous Salad with Peas and Mint</title>
 <style>
 body {
-        background-color: #000000;
+	background-color: #ADD8E6;
 	margin: 2em 6em;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
 h1, h2 {	
-	color: #000000;}
+	color: #399;}
 h1 {
 	font-size: 1.5em;
 }
@@ -17,7 +17,7 @@ h2 {
 	font-size: 1em;
 }
 small {
-	color: #000000;
+	color: #999;
 }
 </style>
 
@@ -46,10 +46,9 @@ small {
   <li>Make the dressing in a small bowl by whisking together the juice of a lemon, the salt, pepper, and enough olive oil to properly balance the acidity of the lemon juice. It will take approximately 1/4 cup of olive oil, maybe a little more. Remember that this dressing has to flavor many cups of bland and absorbant couscous, so make sure you have enough and make sure the flavor is bold (don't be afraid of the salt... it will get spread out).</li>
   <li>When the couscous is cool, toss in the peas, mint, veggies and coat with the dressing. It can be served right away or saved until the next day.</li>
 </ol>
-
-<p><a href="../salmon.html">Try this with Garlic Salmon.</a></p>
-<p><a href="../../index.html">[Back to the home page]</a> 
-
+	
+<p>Click <a href="../index.html">here</a> to return to the home page.</p>  	
 
 
-</p></body></html>
+
+</body></html>
