--- a/Menu.html
+++ b/Menu.html
@@ -34,7 +34,7 @@ Click <a href="about.html">here</a> to learn about the site.<p></p>
 
 <h2>From Jen’s Cookbook</h2>
 <ul>
-  <li><a href="tapenade.html">Tapenade (Olive Spread)</a></li>
+  <li><a href="tapenede.html">Tapenade (Olive Spread)</a></li>
   <li><a href="salmon.html">Garlic Salmon</a></li>
   <li><a href="linguine.html">Linguine with Clam Sauce</a></li>
   <li><a href="couscous.html">Couscous with Peas and Mint</a></li>
