--- a/Menu.html
+++ b/Menu.html
@@ -30,7 +30,7 @@ small {
 
 <p>People who know me know that I love to cook. I've created this site to share some of my favorite recipes and online food resources. <i>Bon Appetit!</i> </p>
 
-Click <a href="about.html">here</a> to learn about the site.<p></p>
+Click <a href="About.html">here</a> to learn about the site.<p></p>
 
 <h2>From Jen’s Cookbook</h2>
 <ul>
